# bt-test

./: biome.json  components.json  package.json  tsconfig.json
js-noble/: .gitignore  biome.json  package.json  tsconfig.json
js-noble/src/: main.ts
js-noble/src/client/: app.tsx  index.html  main.tsx
js-noble/src/client/components/: form.tsx  hr-card.tsx  time-card.tsx
js-noble/src/client/components/ui/: button.tsx  card.tsx  label.tsx
js-noble/src/client/hooks/: stopwatch.ts
js-noble/src/client/utils/: index.ts
js-noble/src/lib/: file.ts
python-bleak/: .gitignore  file-writer.py  file_writer.py  main.py  pyproject.toml
src/: main.ts
src/client/: app.tsx  index.html  main.tsx  styles.css
src/client/components/: form.tsx  theme-provider.tsx
src/client/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  sonner.tsx
src/client/shadcn/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  sonner.tsx
src/lib/: ble.ts  bt.ts  file.ts  shutdown.ts  ws.ts
src/server/: main.ts
src/server/lib/: ble.ts  file.ts  response.ts  shutdown.ts  utils.ts  ws.ts
