[project]
name = "python-bleak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=2.1.1",
    "customtkinter>=5.2.2",
]
[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"



